@@ -1,3 +1,9 @@
+2023-03-16 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/pdk/gen.c,
+	  support/regression/tests/bug-3556.c:
+	  Fix an issue in pdk shift codegen for non-dead shift amount in acc.
+
 2023-03-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCast.c,
